[tool.poetry]
name = "hammer-tt"
version = "0.1.0"
description = ""
authors = ["Yauheni Karaliou <evgeny.korolev555@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
djangorestframework = "^3.15.2"
drf-spectacular = "^0.28.0"
python-dotenv = "^1.0.1"
djangorestframework-simplejwt = "^5.3.1"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
